# LOB-MCPAppsSample

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  MARKETING.md  README.md  SESSION-CONTEXT.md  SETUP.md  Set-Sail.ps1  SetSail.ps1  check_meta.py  docker-compose.yml  regen_manifests.py
.claude/: settings.local.json
.github/workflows/: ci.yml
coupa-mcp-app/: .env.example  Dockerfile  pyproject.toml
coupa-mcp-app/coupa_mcp/: __main__.py  client.py  coupa_server.py  coupa_tools.py  server.py  settings.py  tools.py
deploy/: Provision-Agent.ps1  SetSail-minimal.ps1  SetSail.ps1  check_meta.py  deploy.sh  main.bicep  parameters.example.bicepparam  regen_manifests.py  verify.py
docs/: docusign-widget-test.html  flight-widget-test.html  hs-widget-test.html  hubspot.html  image-prompts.md  index.html  sap-widget-test.html  sf-widget-test.html  snow-hr-widget-test.html  snow-widget-test.html
docs/docusign_mcp/web/: widget.html
docs/flight_mcp/web/: widget.html
docs/hubspot_mcp/web/: widget.html
docs/sap_s4hana_mcp/web/: widget.html
docs/servicenow_hr_mcp/web/: widget.html
docs/servicenow_mcp/web/: widget.html
docs/sf_crm_mcp/web/: widget.html
docusign-mcp-app/: .env.example  Dockerfile  pyproject.toml
docusign-mcp-app/docusign_mcp/: __main__.py  client.py  docusign_client.py  docusign_server.py  docusign_tools.py  server.py  settings.py  tools.py
docusign-mcp-app/docusign_mcp/web/: widget.html
flight-mcp-app/: .env.example  Dockerfile  pyproject.toml
flight-mcp-app/flight_mcp/: __main__.py  client.py  flight_client.py  flight_server.py  flight_settings.py  flight_tools.py  server.py  tools.py
flight-mcp-app/flight_mcp/web/: widget.html
gateway/: Dockerfile  __main__.py  app.py  pyproject.toml
hubspot-mcp-app/: .env.example  Dockerfile  pyproject.toml
hubspot-mcp-app/hubspot_mcp/: __main__.py  hubspot_client.py  hubspot_server.py  hubspot_tools.py  server.py  settings.py  tools.py
hubspot-mcp-app/hubspot_mcp/web/: widget-v1.html  widget-v2.html  widget.html
hubspot-mcp-app/tests/: widget_test.html
jira-mcp-app/: .env.example  Dockerfile  pyproject.toml
jira-mcp-app/jira_mcp/: __main__.py  jira_client.py  jira_server.py  jira_tools.py  server.py  settings.py  tools.py
lob-agent/: .gitignore  m365agents.yml  teamsapp.yml
lob-agent/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json  mcp-tools.json
lob-agent/env/: .env.dev
lob-agent/skills/: campaign-performance.md  crm-pipeline.md  cross-lob-operations.md  docusign-envelopes.md  flight-tracker.md  incident-triage.md  procurement-check.md
sap-mcp-app/: .env.example  Dockerfile  pyproject.toml
sap-mcp-app/sap_s4hana_mcp/: __main__.py  sap_client.py  sap_server.py  sap_settings.py  sap_tools.py  server.py  tools.py
sap-mcp-app/sap_s4hana_mcp/web/: widget-v2.html  widget.html
sap-mcp-app/tests/: widget_test.html
saphr-mcp-app/: .env.example  Dockerfile  pyproject.toml
saphr-mcp-app/saphr_mcp/: __main__.py  saphr_client.py  saphr_server.py  saphr_tools.py  server.py  settings.py  tools.py
sf-mcp-app/: .env.example  Dockerfile  pyproject.toml
sf-mcp-app/.claude/: settings.local.json
sf-mcp-app/sf_crm_mcp/: __main__.py  salesforce.py  salesforce_server.py  salesforce_tools.py  server.py  settings.py  tools.py
sf-mcp-app/sf_crm_mcp/config/: entities.default.json  entities.json
sf-mcp-app/sf_crm_mcp/web/: widget-v1.html  widget-v2.html  widget.html
sf-mcp-app/tests/: mockup_test.html  widget-mockup.html  widget_test.html
shared-mcp-lib/: pyproject.toml
shared-mcp-lib/shared_mcp/: auth.py  http.py  logger.py  settings.py  telemetry.py
snow-mcp-app/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
snow-mcp-app/servicenow_mcp/: __main__.py  server.py  servicenow_client.py  servicenow_server.py  servicenow_tools.py  settings.py  tools.py
snow-mcp-app/servicenow_mcp/web/: widget-v1.html  widget-v2.html  widget.html
snow-mcp-app/tests/: widget-test-prototype.html  widget_test.html
tests/: harness.html  sap-fluent-preview.html
tests/mocks/: coupa.json  docusign.json  flight.json  hubspot.json  jira.json  salesforce.json  sap.json  saphr.json  servicenow-hr.json  servicenow.json  workday.json
widgets/: build.mjs  package-lock.json  package.json  vite.config.ts
widgets/src/docusign/: App.tsx  index.html  main.tsx  types.ts
widgets/src/flight/: App.tsx  index.html  main.tsx  types.ts
widgets/src/hubspot/: App.tsx  index.html  main.tsx  types.ts
widgets/src/salesforce/: App.tsx  index.html  main.tsx  types.ts
widgets/src/sap/: App.tsx  index.html  main.tsx  types.ts
widgets/src/servicenow/: App.tsx  index.html  main.tsx  types.ts
widgets/src/servicenow-hr/: App.tsx  index.html  main.tsx  types.ts
widgets/src/shared/: ErrorBoundary.tsx  ExpandButton.tsx  FluentWrapper.tsx  McpBridge.tsx  McpFooter.tsx  Toast.tsx
workday-mcp-app/: .env.example  Dockerfile  pyproject.toml
workday-mcp-app/workday_mcp/: __main__.py  client.py  config.py  helpers.py  schemas.py  server.py  tools.py  workday_server.py  workday_settings.py  workday_tools.py
