[project]
name = "docusign-mcp"
version = "0.1.0"
description = "DocuSign eSignature MCP server for The Great Trading Company"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.26.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.3.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
docusign-mcp = "docusign_mcp.server:main"
