[project]
name = "flight-mcp"
version = "0.1.0"
description = "Flight Tracker MCP server for GTC — OpenSky Network API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.3.0",
]

[project.scripts]
flight-mcp = "flight_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_mcp"]
