[project]
name = "hubspot-mcp"
version = "0.1.0"
description = "HubSpot CRM MCP server for Contacts and Deals"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
]

[project.scripts]
hubspot-mcp = "hubspot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hubspot_mcp"]
