[project]
name = "sap-s4hana-mcp"
version = "0.1.0"
description = "SAP S/4HANA MCP server for Purchase Orders, Business Partners, and Materials"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.26.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.3.0",
]

[project.scripts]
sap-s4hana-mcp = "sap_s4hana_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sap_s4hana_mcp"]
