[project]
name = "shared-mcp"
version = "0.1.0"
description = "Shared auth, http, and settings utilities for GTC MCP servers"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.26.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
