[project]
name = "servicenow-mcp"
version = "0.1.0"
description = "ServiceNow MCP server for Incidents and Requests"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
]

[project.scripts]
servicenow-mcp = "servicenow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servicenow_mcp"]
